@@ -1,5 +1,7 @@
 ﻿$Revision$
 	$Author$ $Date$
+	- AirPlay SDK,
+	- ruby minor updates
 	
 #Revision: 1398
 	formirror 2010-02-18 21:20:46 +0300 (Чт, 18 фев 2010)
